# Weishaupt2HA

./: .gitignore  CHANGELOG.md  KONZEPT.md  README.md  hacs.json
custom_components/weishaupt2ha/: __init__.py  const.py  diagnostics.py  manifest.json  quality_scale.yaml  select.py  sensor.py  strings.json
custom_components/weishaupt2ha/translations/: de.json
custom_components/weishaupt_wp/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  number.py  sensor.py  strings.json  switch.py  water_heater.py
custom_components/weishaupt_wp/translations/: de.json
examples/ebusd/: README.md  docker-compose.yml
examples/lovelace/: README.md  wtc25a_dashboard.yaml
weishaupt_modbus/: PUBLISHING.md  README.md  pyproject.toml
weishaupt_modbus/src/weishaupt_modbus/: __init__.py  client.py  const.py  ebusd_client.py  ebusd_const.py  ebusd_models.py  exceptions.py  models.py  wcm_client.py  wcm_const.py  wcm_models.py
weishaupt_modbus/tests/: test_client.py  test_const.py  test_ebusd.py  test_models.py
