[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weishaupt-modbus"
version = "0.5.1"
description = "Async communication library for Weishaupt heating systems (Modbus TCP + ebusd)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Tim van Wasen" },
]
dependencies = [
    "pymodbus>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
